<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shady Squares</string>
    <string name="size">Size</string>
    <string name="action_settings">Settings</string>
    <string name="moves">Moves</string>
    <string name="move_message">3 to 6</string>
    <string name="proceed">Proceed</string>
    <string name="three">3x3</string>
    <string name="four">4x4</string>
    <string name="five">5x5</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="game_activity">Game Activity</string>
    <string name="title_activity_game4">Game4</string>
    <string name="hello_world">Hello world!</string>
    <string name="help">Help</string>
    <string name="undo">Undo</string>

</resources>