<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.shadysquares.MainActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="40sp"
        android:text="@string/app_name" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/size"
                android:text="@string/size" />
            
            <RadioGroup
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:orientation="vertical">
			    <RadioButton android:id="@+id/size3"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/three"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/size4"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/four"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/size5"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/five"
			        android:onClick="onRadioButtonClicked" />
			</RadioGroup>
            
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:gravity="center"
                android:id="@+id/moves"
                android:text="@string/moves" />
            
            <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/numMoves"  /> -->
                
			<NumberPicker
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:id="@+id/numMoves" />
            
        </LinearLayout>
        
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            
	    <Button 
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_height="wrap_content"
	        android:id="@+id/proceed"
	        android:text="@string/proceed" />
	    
	    <Button
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:layout_height="wrap_content"
	        android:id="@+id/help"
	        android:text="@string/help" />
    
    </LinearLayout>

</LinearLayout>


